fixed untracked files